MySFDCProject/src/objects/Pharma_Products__c.object
<CustomObject>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cosmetic</fullName>
                </value>
                <value>
                    <fullName>HealthCare</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Product price</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <label>Specification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubCategory__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SmallA</fullName>
                </value>
                <value>
                    <fullName>SmallB</fullName>
                </value>
                <value>
                    <fullName>SmallC</fullName>
                </value>
                <value>
                    <fullName>MediumA</fullName>
                </value>
                <value>
                    <fullName>MediumB</fullName>
                </value>
                <value>
                    <fullName>MediumC</fullName>
                </value>
                <value>
                    <fullName>LargeA</fullName>
                </value>
                <value>
                    <fullName>LargeB</fullName>
                </value>
                <value>
                    <fullName>LargeC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Sample_quantity__c</fullName>
        <label>Total Sample quantity</label>
        <summarizedField>Sample__c.Quantity__c</summarizedField>
        <summaryForeignKey>Sample__c.Pharma_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Pharma Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Total_Sample_quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pharma Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharma Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>